--- a/Modulo 11/package.json
+++ b/Modulo 11/package.json
@@ -18,6 +18,7 @@
     "vitest": "^0.29.8"
   },
   "dependencies": {
-    "axios": "^1.8.1"
+    "axios": "^1.8.1",
+    "ibantools": "^4.5.1"
   }
 }
